<resources>
    <string name="app_name">SmartLinkSdkDemo</string>
    <string name="lock_list">搜索列表</string>
    <string name="searching">搜索中...</string>
    <string name="notice">提示</string>
    <string name="ble_not_support">BLE设备功能不支持！</string>
    <string name="ok">OK</string>
    <string name="action_enable_ble">Enable bluetooth now?</string>
    <string name="ble_permission_not_granted">未打开蓝牙权限！</string>
    <string name="progress_connecting">蓝牙连接中...</string>
    <string name="state_connected">已连接</string>
    <string name="state_disconnected">未连接</string>
    <string name="ble_connection_interrupted">连接中断</string>
    <string name="ble_connection_fail">连接失败！</string>
    <string name="retry">重试</string>
    <string name="exit">退出</string>
    <string name="state_ready">已就绪</string>
    <string name="cmd_rsp_fail">命令回复失败！</string>
    <string name="format_lock_state">门锁MAC: %1$s，绑定状态: %2$b</string>
    <string name="format_dev_mac">设备MAC：%1$s</string>
    <string name="format_dev_type">设备类型：%1$s</string>
    <string name="lock_type_other">蓝牙密码锁</string>
    <string name="lock_type_nb">蓝牙NB锁</string>
    <string name="lock_type_f">蓝牙指纹锁</string>
    <string name="lock_type_c">蓝牙NB指纹锁</string>
    <string name="bind_lock">绑定</string>
    <string name="unbind_lock">解绑</string>
    <string name="lock_state">查询状态</string>
    <string name="lock_battery">查询电量</string>
    <string name="nb_imei">查询IMEI</string>
    <string name="lock_login">进登录态</string>
    <string name="open_lock">蓝牙解锁</string>
    <string name="sync_clock">同步时间</string>
    <string name="add_pincode">添加密码</string>
    <string name="del_pincode">删除密码</string>
    <string name="add_rf_card">添加房卡</string>
    <string name="del_rf_card">删除房卡</string>
    <string name="add_fingerprint">添加指纹</string>
    <string name="del_fingerprint">删除指纹</string>
    <string name="change_admin_pincode">修改管理密码</string>
    <string name="gen_offline_pincode">生成离线密码</string>
    <string name="query_slot_state">查询方舌状态</string>
    <string name="query_lock_state">查询门锁状态</string>
    <string name="enter_always_open_mode">进入常开模式</string>
    <string name="exit_always_open_mode">退出常开模式</string>
    <string name="enter_audio_muted_mode">进入静音模式</string>
    <string name="exit_audio_muted_mode">退出静音模式</string>
    <string name="ready_to_swipe_rf_card">请刷卡！</string>
    <string name="bind_lock_succ">绑定成功！</string>
    <string name="bind_lock_fail">绑定失败！</string>
    <string name="unbind_lock_succ">解绑成功！</string>
    <string name="unbind_lock_fail">解绑失败！</string>
    <string name="open_lock__succ">开锁成功！</string>
    <string name="open_lock_fail">开锁失败！</string>
    <string name="lock_login_succ">登录成功！</string>
    <string name="lock_login_fail">登录失败！</string>
    <string name="sync_clock_succ">同步时间成功！</string>
    <string name="sync_clock_fail">同步时间失败！</string>
    <string name="format_lock_battery">门锁电量为: %1$d%%</string>
    <string name="format_lock_battery_low_info">已上锁！电量预警！当前门锁电量为: %1$d%%</string>
    <string name="format_lock_battery_low_warn">已上锁！电量报警！当前门锁电量为: %1$d%%</string>
    <string name="report_lock_battery">已上锁！</string>
    <string name="detect_new_rf_card">检测到新卡</string>
    <string name="format_add_rf_card_or_not">是否添加此房卡，卡号：%1$s？</string>
    <string name="format_rf_card_unlock_succ">房卡开锁成功，序号：%1$d！</string>
    <string name="multi_rf_card_unlock_fail">多次刷房卡开锁失败！</string>
    <string name="format_rf_card_unlock_succ2">房卡开锁成功，卡号：%1$s！</string>
    <string name="multi_rf_card_unlock_fail2">房卡未授权，卡号：%1$s！</string>
    <string name="format_pincode_unlock_succ">密码开锁成功，序号：%1$d！</string>
    <string name="multi_pincode_unlock_fail">多次密码开锁失败！</string>
    <string name="format_pincode_unlock_succ2">密码：%1$d开锁成功！</string>
    <string name="format_pincode_unlock_fail2">密码：%1$d未授权！</string>
    <string name="format_offline_pincode_succ">生成离线密码：%1$d！</string>
    <string name="format_offline_pincode_fail">生成出错：%1$s！</string>
    <string name="format_fingerprint_unlock_succ">指纹开锁成功，序号：%1$d！</string>
    <string name="multi_fingerprint_unlock_fail">多次指纹开锁失败！</string>
    <string name="format_nb_imei">设备IMEI号为：%1$s！</string>
    <string name="add_pincode_succ">密码添加成功！</string>
    <string name="add_pincode_fail">添加密码失败！</string>
    <string name="del_pincode_succ">删除密码成功！</string>
    <string name="del_pincode_fail">删除密码失败！</string>
    <string name="add_rf_card_succ">添加房卡成功！</string>
    <string name="add_rf_card_fail">添加房卡失败！</string>
    <string name="del_rf_card_succ">删除房卡成功！</string>
    <string name="del_rf_card_fail">删除房卡失败！</string>
    <string name="add_fingerprint_succ">添加指纹成功！</string>
    <string name="add_fingerprint_fail">添加指纹失败！</string>
    <string name="del_fingerprint_succ">删除指纹成功！</string>
    <string name="del_fingerprint_fail">删除指纹失败！</string>
    <string name="change_admin_pincode_succ">修改管理密码成功！</string>
    <string name="change_admin_pincode_fail">修改管理密码失败！</string>
    <string name="ready_to_press_fingerprint">请按压指纹！</string>
    <string name="action_to_press_fingerprint">请按下指纹！</string>
    <string name="action_to_leave_fingerprint">移开指纹</string>
    <string name="error_login_state_off">操作前请先登录！</string>
    <string name="error_wait_timeout">操作操时！</string>
    <string name="error_user_cancel">用户取消操作！</string>
    <string name="error_time_invalid">时间参数有误！</string>
    <string name="error_index_invalid">操作序号有误！</string>
    <string name="lock_slot_state_open">此门锁方舌打开</string>
    <string name="lock_slot_state_close">此门锁方舌关闭</string>
    <string name="lock_unlock_state_open">此门锁已打开</string>
    <string name="lock_unlock_state_close">此门锁已关闭</string>
</resources>
